[package]
name = "wstool"
version = "0.1.0"
authors = ["Anthony Ashton <asup@asuperpower.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# timespan = "^0"
chrono = "^0"
parse_duration = "^0"
websocket = "^0"
url = "^0"
